feat: Add endpoint for store profile update
